@@ -1,3 +1,9 @@
+2001-05-15  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/dlog.c: rename 'newline' param to work with U/Win
+
+	* src/dedcolor.c: rename 'color_names[]' to work with U/Win
+
 2001-01-30  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/dedscan.c: lookup based on z_real_name
